# microdb

./: LICENSE.md  README.MD  pyproject.toml
microdb/: __init__.py  _db.py  middlewares.py  query.py  storage.py  utils.py
